fixed page shift

--- a/dailyInspiration/css/styles.css
+++ b/dailyInspiration/css/styles.css
@@ -61,7 +61,7 @@ body a:hover {
 
 .gridded {
     display: grid;
-    grid-template-rows: 65px 1fr;
+    grid-template-rows: 74px 1fr;
 }
 
 .contentWrap {
